--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Install Clang
         run: |
              apt update
-             apt install -y clang tar xz
+             apt install -y clang tar xz-utils
       - name: Fetch FreeBSD
         run:  |
               cd /tmp
