--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -42,7 +42,7 @@ jobs:
     strategy:
       matrix:
         #target: [armv7-unknown-linux-gnueabihf,aarch64-unknown-linux-musl,x86_64-unknown-linux-musl,x86_64_unknown_freebsd]
-        target: [x86_64_unknown_freebsd]
+        target: [x86_64-unknown-freebsd]
     container:
       image: lldap/rust-dev
       env:
