--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -86,7 +86,9 @@ jobs:
         run: rustup target add ${{ matrix.target }}
 
       - name: compile ${{ matrix.target }}
-        run: cargo build --target=${{ matrix.target }} --release -p lldap -p lldap_migration_tool -p lldap_set_password
+        run: |
+             export PATH="/opt/cross-freebsd-13/:$PATH"
+             cargo build --target=${{ matrix.target }} --release -p lldap -p lldap_migration_tool -p lldap_set_password
 
       - name: check path
         run: ls -alr target/release
