--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -49,8 +49,8 @@ jobs:
         CARGO_TARGET_ARMV7_UNKNOWN_LINUX_GNUEABIHF_LINKER: arm-linux-gnueabihf-gcc
         CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_LINKER: aarch64-linux-musl-gcc
         CARGO_TARGET_X86_64_UNKNOWN_LINUX_MUSL_LINKER: x86_64-linux-musl-gcc
-        CARGO_TARGET_X86_64_UNKNOWN_FREEBSD_LINKER: clang
-        CC_x86_64_unknown_freebsd: clang
+        CARGO_TARGET_X86_64_UNKNOWN_FREEBSD_LINKER: clang++
+        CC_x86_64_unknown_freebsd: clang++
         CARGO_TERM_COLOR: always
         RUSTFLAGS: -Ctarget-feature=+crt-static
         CARGO_HOME: ${GITHUB_WORKSPACE}/.cargo
@@ -82,14 +82,12 @@ jobs:
               ln -s libc++.a /opt/cross-freebsd-13/usr/lib/libstdc++.a
               ln -s libc++.so /opt/cross-freebsd-13/usr/lib/libstdc++.so 
               rm -f /tmp/base.txz
+      - name: Append cross freebsd path
+        run:  echo "/opt/cross-freebsd-13/usr/lib:/opt/cross-freebsd-13/usr/inlcude:/opt/cross-freebsd-13/lib" >> $GITHUB_PATH
       - name: Add target
         run: rustup target add ${{ matrix.target }}
-
       - name: compile ${{ matrix.target }}
-        run: |
-             echo "/opt/cross-freebsd-13/usr/lib:/opt/cross-freebsd-13/usr/inlcude" >> $GITHUB_PATH
-             echo $GITHUB_PATH
-             cargo build --target=${{ matrix.target }} --release -p lldap -p lldap_migration_tool -p lldap_set_password
+        run: cargo build --target=${{ matrix.target }} --release -p lldap -p lldap_migration_tool -p lldap_set_password
 
       - name: check path
         run: ls -alr target/release
