--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -49,8 +49,8 @@ jobs:
         CARGO_TARGET_ARMV7_UNKNOWN_LINUX_GNUEABIHF_LINKER: arm-linux-gnueabihf-gcc
         CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_LINKER: aarch64-linux-musl-gcc
         CARGO_TARGET_X86_64_UNKNOWN_LINUX_MUSL_LINKER: x86_64-linux-musl-gcc
-        CARGO_TARGET_X86_64_UNKNOWN_FREEBSD_LINKER: clang++
-        CC_x86_64_unknown_freebsd: clang++
+        CARGO_TARGET_X86_64_UNKNOWN_FREEBSD_LINKER: clang
+        CC_x86_64_unknown_freebsd: clang
         CARGO_TERM_COLOR: always
         RUSTFLAGS: -Ctarget-feature=+crt-static
         CARGO_HOME: ${GITHUB_WORKSPACE}/.cargo
