--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -87,8 +87,7 @@ jobs:
       - name: Add target
         run: rustup target add ${{ matrix.target }}
       - name: compile ${{ matrix.target }}
-        run: cargo build --target=${{ matrix.target }} --release -p lldap -p lldap_migration_tool -p lldap_set_password
-
+        run: cargo build --target=${{ matrix.target }} --release -p lldap -p lldap_migration_tool
       - name: check path
         run: ls -alr target/release
 
