--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -53,7 +53,6 @@ jobs:
         CC_x86_64_unknown_freebsd: clang
         CARGO_TERM_COLOR: always
         CARGO_HOME: ${GITHUB_WORKSPACE}/.cargo
-        RUSTFLAGS: -fuse-ld=lld -stdlib=libc++ -o zpipe zpipe.cc -lz --verbose
     steps:
       - uses: actions/checkout@v3
       - uses: actions/cache@v3
@@ -86,8 +85,12 @@ jobs:
         run:  echo "/opt/cross-freebsd-13/usr/lib:/opt/cross-freebsd-13/usr/inlcude:/opt/cross-freebsd-13/lib" >> $GITHUB_PATH
       - name: Add target
         run: rustup target add ${{ matrix.target }}
-      - name: compile ${{ matrix.target }}
-        run: cargo build --target=${{ matrix.target }} --release -p lldap
+      - name: Use cross?
+        run: cargo install cross --git https://github.com/cross-rs/cross
+      - name: Build with cross
+        run: cross build --target x86_64-unknown-freebsd
+      #- name: compile ${{ matrix.target }}
+      #  run: cargo build --target=${{ matrix.target }} --release -p lldap
       - name: check path
         run: ls -alr target/release
 
