--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -88,7 +88,7 @@ jobs:
       - name: Use cross?
         run: cargo install cross --git https://github.com/cross-rs/cross
       - name: Build with cross
-        run: cross build --target x86_64-unknown-freebsd
+        run: ${GITHUB_WORKSPACE}/.cargo/bin/cross build --target x86_64-unknown-freebsd
       #- name: compile ${{ matrix.target }}
       #  run: cargo build --target=${{ matrix.target }} --release -p lldap
       - name: check path
