--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -69,7 +69,7 @@ jobs:
         run: |
              apt update
              apt install -y docker.io
-             dockerd &&
+             dockerd
       - name: Use cross?
         run: cargo install cross --git https://github.com/cross-rs/cross
       - name: Build with cross
