--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -67,8 +67,8 @@ jobs:
             lldap-bin-${{ matrix.target }}-
       - name: Install podman
         run: |
-             apt update
-             apt install -y podman
+             sudo apt update
+             sudo apt install -y podman
       - name: Use cross?
         run: cargo install cross --git https://github.com/cross-rs/cross
       - name: Build with cross
