--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Use cross?
         run: cargo install cross --git https://github.com/cross-rs/cross
       - name: Build with cross
-        run: /home/runner/.cargo/bin/cross build --target x86_64-unknown-freebsd
+        run: /home/runner/.cargo/bin/cross build --release --target x86_64-unknown-freebsd -p lldap -p lldap_migration_tool -p lldap_set_password
       #- name: compile ${{ matrix.target }}
       #  run: cargo build --target=${{ matrix.target }} --release -p lldap
       - name: check path
