--- a/.github/workflows/build-freebsd-binary.yml
+++ b/.github/workflows/build-freebsd-binary.yml
@@ -27,7 +27,7 @@ jobs:
              sudo apt update
              sudo apt install -y podman
       - name: Use cross?
-        run: cargo install cross --git https://github.com/cross-rs/cross
+        run: cargo install --force cross --git https://github.com/cross-rs/cross 
       - name: Build with cross
         run: /home/runner/.cargo/bin/cross build --release --target x86_64-unknown-freebsd -p lldap -p lldap_migration_tool -p lldap_set_password
       #- name: compile ${{ matrix.target }}
