--- a/.github/workflows/docker-build-static.yml
+++ b/.github/workflows/docker-build-static.yml
@@ -118,7 +118,10 @@ jobs:
           path: app/
 
   build-freebsd-binary:
+    needs: pre_job
+    if: ${{ needs.pre_job.outputs.should_skip != 'true' || github.event_name == 'release' }}
     uses: ./.github/workflows/build-freebsd-binary.yml
+    
   build-bin:
     runs-on: ubuntu-latest
     needs: pre_job
