--- a/.github/workflows/docker-build-static.yml
+++ b/.github/workflows/docker-build-static.yml
@@ -690,7 +690,7 @@ jobs:
              mv bin/x86_64-unknown-linux-musl-lldap_set_password-bin/lldap_set_password bin/amd64-lldap_set_password
              mv bin/armv7-unknown-linux-musleabihf-lldap_set_password-bin/lldap_set_password bin/armhf-lldap_set_password
              mv bin/x86_64-unknown-freebsd-lldap-bin/lldap bin/x86_64-freebsd-lldap
-             mv bin/x86_64-unknown-freebsd-lldap_migration_tool-bin/lldap_migration_tool bin/x86_64-freebsd-lldap_migration_tool
+             mv bin/x86_64-unknown-freebsd-migration_tool-bin/lldap_migration_tool bin/x86_64-freebsd-lldap_migration_tool
              mv bin/x86_64-unknown-freebsd-lldap_set_password-bin/lldap_set_password bin/x86_64-freebsd-lldap_set_password
              chmod +x bin/*-lldap
              chmod +x bin/*-lldap_migration_tool
@@ -716,6 +716,7 @@ jobs:
              mkdir aarch64-lldap
              mkdir amd64-lldap
              mkdir armhf-lldap
+             mkdir x86_64-freebsd-lldap
              mv bin/aarch64-lldap aarch64-lldap/lldap
              mv bin/amd64-lldap amd64-lldap/lldap
              mv bin/armhf-lldap armhf-lldap/lldap
@@ -725,18 +726,24 @@ jobs:
              mv bin/aarch64-lldap_set_password aarch64-lldap/lldap_set_password
              mv bin/amd64-lldap_set_password amd64-lldap/lldap_set_password
              mv bin/armhf-lldap_set_password armhf-lldap/lldap_set_password
+             mv bin/x86_64-unknown-freebsd-lldap-bin/lldap x86_64-freebsd-lldap/lldap
+             mv bin/x86_64-unknown-freebsd-migration_tool-bin/lldap_migration_tool x86_64-freebsd-lldap/lldap_migration_tool
+             mv bin/x86_64-unknown-freebsd-lldap_set_password-bin/lldap_set_password x86_64-freebsd-lldap/lldap_set_password
              cp -r app aarch64-lldap/
              cp -r app amd64-lldap/
              cp -r app armhf-lldap/
-             ls -alR aarch64-lldap/
-             ls -alR amd64-lldap/
-             ls -alR armhf-lldap/
+             cp -r app x86_64-freebsd-lldap/
+             ls -al aarch64-lldap/
+             ls -al amd64-lldap/
+             ls -al armhf-lldap/
+             ls -al x86_64-freebsd-lldap/
 
       - name: Packing LLDAP and Web UI
         run: |
              tar -czvf aarch64-lldap.tar.gz aarch64-lldap/
              tar -czvf amd64-lldap.tar.gz amd64-lldap/
              tar -czvf armhf-lldap.tar.gz armhf-lldap/
+             tar -czvf x86_64-freebsd-lldap/
 
 
       - name: Upload compressed release
@@ -746,6 +753,7 @@ jobs:
           allowUpdates: true
           artifacts:  aarch64-lldap.tar.gz,
                       amd64-lldap.tar.gz,
-                      armhf-lldap.tar.gz
+                      armhf-lldap.tar.gz,
+                      x86_64-freebsd-lldap.tar.gz
         env:
          GITHUB_TOKEN: ${{ github.token }}
