--- a/.github/workflows/build-freebsd-binary.yml
+++ b/.github/workflows/build-freebsd-binary.yml
@@ -1,7 +1,40 @@
-name: build freebsd binary
+name: build linux binary
 
 on:
   workflow_call:
+
+env:
+  CARGO_TERM_COLOR: always
+
+# In total 5 jobs, all the jobs are containerized
+# ---
+
+#######################################################################################
+# GitHub actions randomly timeout when downloading musl-gcc                           #
+# Using lldap dev image based on https://hub.docker.com/_/rust and musl-gcc bundled   #
+# Look into .github/workflows/Dockerfile.dev for development image details            #
+#######################################################################################
+
+# build-ui , create/compile the web
+### install wasm
+### install rollup
+### run app/build.sh
+### upload artifacts
+
+# builds-armhf, build-aarch64, build-amd64 create binary for respective arch
+### Add non-native architecture dpkg --add-architecture XXX
+### Install dev tool gcc g++, etc. per respective arch
+### Cargo build
+### Upload artifacts
+
+## the CARGO_ env
+#CARGO_TARGET_ARMV7_UNKNOWN_LINUX_GNUEABIHF_LINKER: arm-linux-gnueabihf-gcc
+# This will determine which architecture lib will be used.
+
+# build-ui,builds-armhf, build-aarch64, build-amd64 will upload artifacts will be used next job
+# build-docker-image job will fetch artifacts and run Dockerfile.ci then push the image.
+
+# cache based on Cargo.lock
 
 jobs:
   build-bin:
@@ -9,23 +42,34 @@ jobs:
     strategy:
       matrix:
         target: [x86_64-unknown-freebsd]
+      fail-fast: false
+    container:
+      image: lldap/rust-dev:latest
+      env:
+        CARGO_TERM_COLOR: always
+        RUSTFLAGS: -Ctarget-feature=+crt-static
+        CARGO_HOME: ${GITHUB_WORKSPACE}/.cargo
     steps:
       - uses: actions/checkout@v3
       - uses: actions/cache@v3
         with:
-            key: lldap-bin-${{ matrix.target }}-${{ hashFiles('**/Cargo.lock') }}
-            restore-keys: |
-              lldap-bin-${{ matrix.target }}-
-      - name: Install podman
-        run: |
-             sudo apt update
-             sudo apt install -y podman
-      - name: Use cross?
-        run: cargo install cross --git https://github.com/cross-rs/cross
-      - name: Build with cross
-        run: /home/runner/.cargo/bin/cross build --release --target x86_64-unknown-freebsd -p lldap -p lldap_migration_tool -p lldap_set_password
-      #- name: compile ${{ matrix.target }}
-      #  run: cargo build --target=${{ matrix.target }} --release -p lldap
+          path: |
+            .cargo/registry/index
+            .cargo/registry/cache
+            .cargo/git/db
+            target/
+          key: lldap-bin-${{ matrix.target }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            lldap-bin-${{ matrix.target }}-
+      - name: show my env
+        run: env
+
+      - name: Add target
+        run: rustup target add ${{ matrix.target }}
+
+      - name: compile ${{ matrix.target }}
+        run: cargo build --target=${{ matrix.target }} --release -p lldap -p lldap_migration_tool -p lldap_set_password
+
       - name: check path
         run: ls -alr target/release
 
@@ -46,4 +90,3 @@ jobs:
         with:
           name: ${{ matrix.target }}-lldap-set-password-bin
           path: target/${{ matrix.target }}/release/lldap_set_password
-
