--- a/.github/workflows/build-linux-binary.yml
+++ b/.github/workflows/build-linux-binary.yml
@@ -50,8 +50,8 @@ jobs:
         RUSTFLAGS: -Ctarget-feature=+crt-static
         CARGO_HOME: ${GITHUB_WORKSPACE}/.cargo
     steps:
-      - uses: actions/checkout@latest
-      - uses: actions/cache@latest
+      - uses: actions/checkout
+      - uses: actions/cache
         with:
           path: |
             .cargo/registry/index
@@ -74,19 +74,19 @@ jobs:
         run: ls -alr target/release
 
       - name: upload ${{ matrix.target}} lldap artifacts
-        uses: actions/upload-artifact@latest
+        uses: actions/upload-artifact
         with:
           name: ${{ matrix.target}}-lldap-bin
           path: target/${{ matrix.target }}/release/lldap
 
       - name: upload ${{ matrix.target }} migration tool artifacts
-        uses: actions/upload-artifact@latest
+        uses: actions/upload-artifact
         with:
           name: ${{ matrix.target }}-migration-tool-bin
           path: target/${{ matrix.target }}/release/lldap_migration_tool
 
       - name: upload ${{ matrix.target }}-set-password-bin
-        uses: actions/upload-artifact@latest
+        uses: actions/upload-artifact
         with:
           name: ${{ matrix.target }}-lldap-set-password-bin
           path: target/${{ matrix.target }}/release/lldap_set_password
