--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,6 +35,8 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v5.0.0
       - uses: Swatinem/rust-cache@v2
+      - name: Version Check
+        run: cargo --version
       - name: Build
         run: cargo build --verbose --workspace
       - name: Run tests
@@ -55,7 +57,10 @@ jobs:
         uses: actions/checkout@v5.0.0
 
       - uses: Swatinem/rust-cache@v2
-
+      - name: Version Check
+        uses: action-rs/cargo@v1
+        with:
+          command: --version
       - name: Run cargo clippy
         uses: actions-rs/cargo@v1
         with:
