--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -55,17 +55,11 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v5.0.0
-
       - uses: Swatinem/rust-cache@v2
       - name: Version Check
-        uses: action-rs/cargo@v1
-        with:
-          args: --version
+        run: cargo --version
       - name: Run cargo clippy
-        uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-          args: --tests --all -- -D warnings
+        run: cargo clippy --tests --all -- -D warnings
 
   format:
     name: cargo fmt
@@ -75,14 +69,9 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v5.0.0
-
       - uses: Swatinem/rust-cache@v2
-
       - name: Run cargo fmt
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
+        run: cargo fmt --all -- --check
 
   coverage:
     name: Code coverage
@@ -94,9 +83,10 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v5.0.0
-
+      # Why had two version? Nightly and Stable?
       - name: Install Rust
-        run: rustup toolchain install nightly --component llvm-tools-preview && rustup component add llvm-tools-preview --toolchain stable-x86_64-unknown-linux-gnu
+        run: rustup toolchain install nightly --component llvm-tools-preview && \
+             rustup component add llvm-tools-preview --toolchain stable-x86_64-unknown-linux-gnu
       - name: Check Cargo version
         run: cargo --version
       - uses: taiki-e/install-action@cargo-llvm-cov
