--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -85,8 +85,7 @@ jobs:
         uses: actions/checkout@v5.0.0
       # Why had two version? Nightly and Stable?
       - name: Install Rust
-        run: rustup toolchain install nightly --component llvm-tools-preview && \
-             rustup component add llvm-tools-preview --toolchain stable-x86_64-unknown-linux-gnu
+        run: rustup toolchain install stable --component llvm-tools-preview && rustup component add llvm-tools-preview --toolchain stable-x86_64-unknown-linux-gnu
       - name: Check Cargo version
         run: cargo --version
       - uses: taiki-e/install-action@cargo-llvm-cov
